--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "twilio": "^3.71.1"
+    "qrcode-terminal": "^0.12.0",
+    "twilio": "^3.71.1",
+    "whatsapp-web.js": "^1.15.1"
   }
 }
